feat(proposals): add jdk.ShenandoahOldEvacuation (#15) and jdk.ShenandoahAdaptiveCSetSelection (#16)
Full log-site audit (pass 75) found two production-visible log_info gaps
not covered by any existing proposal:

- jdk.ShenandoahOldEvacuation (Propose, High priority): 9 log_info lines
  across prepare_for_old_collections(), finalize_mixed_evacs(),
  top_off_collection_set(), adjust_old_garbage_threshold() in
  shenandoahOldHeuristics.cpp. Covers collectable/immediate garbage survey,
  evacuation outcome (evacuated/all_pinned/no_budget), budget top-up from
  young surplus, and old garbage threshold auto-tuning. ~50 lines across
  3 emission sites, no prerequisites.

- jdk.ShenandoahAdaptiveCSetSelection (Propose, Medium priority): single
  log_info(gc,ergo) in choose_collection_set_from_regiondata() at
  shenandoahAdaptiveHeuristics.cpp:124. Fields: freeTargetBytes,
  actualFreeBytes, maxEvacuationBytes, minGarbageBytes. ~15 lines, no
  prerequisites.

All other production-visible GC log_info sites are either covered by
existing events or covered by existing proposals #1-14.